# algorithms

./: .clang-format.yml  .git-blame-ignore-revs  Bakefile.sh  CMakeLists.txt  LICENSE.txt  README.md  a.out  conanfile.txt
Run/: main.cpp
apps/: LinkedListDemo.cpp
cpp/: .clang-tidy.yml  Config.h.in
cpp/demos/: demo_Algebra.cpp
cpp/include/: LinkedList.hpp  LinkedListFull.hpp
cpp/include/utils/: util.hpp
cpp/src/: Queue.tpp
cpp/tests/: test_LinkedList.cpp
demos/: demo_LinkedList.cpp
include/: Algebra.hpp  Bag.hpp  LinkedListSimple.hpp  Queue.hpp  fact.hpp
src/: Algebra.cpp  CMakeLists.txt  LinkedList.tpp  fact.cpp
src/algorithms/: LinkedListSimple.tpp
tests/: CMakeLists.txt  LinkedList.cpp  adhoc.cpp  test_Algebra.cpp  test_LinkedList.cpp  test_fact.cpp
